unpackaged/main/default/objects/Case/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <defaultValue>true</defaultValue>
    <label>High Priority</label>
    <type>Checkbox</type>
</CustomField>