unpackaged/main/default/objects/Case/fields/Support_details__c.field-meta.xml
<CustomField>
    <fullName>Support_details__c</fullName>
    <label>Support details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>